# chatgpt-tui

./: Cargo.toml
src/: cursor.rs  main.rs  models.rs  openai.rs  state.rs  stateful_list.rs  ui.rs  utils.rs
src/components/: input.rs  mod.rs  popup.rs  stateful_list.rs
